refactorizando diseño cartas

--- a/ivy.xml
+++ b/ivy.xml
@@ -1,5 +1,5 @@
 <ivy-module version="2.0">
-    <info organisation="org.apache" module="tp-final-algo3"/>
+    <info organisation="org.apache" module="tp-final-main.fiuba.algo3"/>
     
      <configurations>
         <conf name="analysis"  description="analysis jars"/>
